Documentation: eliminating border-collapse to prevent firefox bug of borders disappearing randomly

--- a/doc/common/glideinWMS.css
+++ b/doc/common/glideinWMS.css
@@ -163,7 +163,6 @@ table.requirements, table.attributes
     border-bottom:      1px solid #000;
     border-right:       1px solid #000;
     border-left:        1px solid #000;
-    border-collapse:    collapse;
     border-spacing:     0px;
 }
 
